--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <title>Document</title>
     <script src="index.js"></script>
   </head>
-  <body></body>
+  <body>
+    Testing. Attention Please!
+  </body>
 </html>
